Fixes after testing